--- a/index.html
+++ b/index.html
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf8">
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-</head>
-<body>
-	<div id="mask">
-			<img src="img/monaOriginal.jpg" id="centro"/>
+	<head>
+		<meta charset="utf-8">
+		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	</head>
+
+	<body>
+
+		<header>
+			<!-- Aqui vai ficar o header -->
+		</header>
+
+		<section id="secao-principal">
+		<!-- Aqui vai ser a seção principal onde vai ficar o background e a imagem principal -->
+			<figure>
+				<img src="img/Monalisa/Monalisa.png">
+				<figcaption>
+					<h1>Mona Lisa</h1>
+					<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
+
+					<p>Sua pintura foi iniciada em 1503 e é nesta obra que o artista melhor concebeu a técnica do sfumato. O 	quadro representa uma mulher com uma expressão introspectiva e um pouco tímida. O seu sorriso restrito é muito sedutor, mesmo que um pouco conservador. O seu corpo representa o padrão de beleza da mulher na época de Leonardo. Este quadro é provavelmente o retrato mais famoso na história da arte, senão, o quadro mais famoso e valioso de todo o mundo. Poucos outros trabalhos de arte são tão controversos, questionados, valiosos, elogiados, comemorados ou reproduzidos.</p>
+				</figcaption>
+			</figure>
 			
-			<div class="info">
-				<h1>Mona Lisa</h1>
-				<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
+		</section>
 
-				<p>Sua pintura foi iniciada em 1503 e é nesta obra que o artista melhor concebeu a técnica do sfumato. O quadro representa uma mulher com uma expressão introspectiva e um pouco tímida. O seu sorriso restrito é muito sedutor, mesmo que um pouco conservador. O seu corpo representa o padrão de beleza da mulher na época de Leonardo. Este quadro é provavelmente o retrato mais famoso na história da arte, senão, o quadro mais famoso e valioso de todo o mundo. Poucos outros trabalhos de arte são tão controversos, questionados, valiosos, elogiados, comemorados ou reproduzidos.</p>
-			</div>
-	</div>
-	<div class="container" id="expo">
-		<div class="row">
-		    <div class="col-sm-6">
-		      <div class="thumbnail">
-		          <img src="img/mona2.jpg" alt="Nature" style="width:100%">
-		          <div class="caption">
-		            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-		          </div>
-		        </a>
-		      </div>
-		    </div>
-		    <div class="col-sm-6">
-		      <div class="thumbnail">
-		          <img src="img/mona6.jpg" alt="Fjords" style="width:100%">
-		          <div class="caption">
-		            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-		          </div>
-		        </a>
-		      </div>
-		    </div>
-		  </div>
-	</div>
+		<section>
+			<!-- Aqui vai ficar a seção secundária onde fica as imagens de releitura -->
+		</section>
+		
+		<footer>
+			<!-- Aqui vai ficar o rodapé -->
+		</footer>
 
-</body>
+	</body>
 </html>
