--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 	</head>
 
 	<body>
-
-		<header>
-			<!-- Aqui vai ficar o header -->
+	<!--Aqui vai ser a seção onde vai ficar o background -->
+		<header id = "header">
+		<!--Aqui vai ser a seção onde vai ficar a imagem do header -->
+			<center><img src="http://i.imgur.com/hzpgFBW.jpg"/></center>
 		</header>
 
 		<section id="secao-principal">
-		<!-- Aqui vai ser a seção principal onde vai ficar o background e a imagem principal -->
+		<!-- Aqui vai ser a seção principal onde vai ficar a imagem principal -->
 			<figure>
-				<img src="img/Monalisa/Monalisa.png">
+				<center><img src="http://i.imgur.com/Ax2DQiV.png"></center>
 				<figcaption>
 					<h1>Mona Lisa</h1>
 					<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
@@ -34,6 +35,5 @@
 		<footer>
 			<!-- Aqui vai ficar o rodapé -->
 		</footer>
-
 	</body>
 </html>
