--- a/index.html
+++ b/index.html
@@ -8,32 +8,36 @@
 	</head>
 
 	<body>
-	<!--Aqui vai ser a seção onde vai ficar o background -->
-		<header id = "header">
-		<!--Aqui vai ser a seção onde vai ficar a imagem do header -->
-			<center><img src="http://i.imgur.com/hzpgFBW.jpg"/></center>
-		</header>
-
 		<section id="secao-principal">
-		<!-- Aqui vai ser a seção principal onde vai ficar a imagem principal -->
-			<figure>
-				<center><img src="http://i.imgur.com/Ax2DQiV.png"></center>
-				<figcaption>
-					<h1>Mona Lisa</h1>
-					<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
+		<!-- Aqui vai ser a seção principal onde vai ficar o header -->
 
-					<p>Sua pintura foi iniciada em 1503 e é nesta obra que o artista melhor concebeu a técnica do sfumato. O 	quadro representa uma mulher com uma expressão introspectiva e um pouco tímida. O seu sorriso restrito é muito sedutor, mesmo que um pouco conservador. O seu corpo representa o padrão de beleza da mulher na época de Leonardo. Este quadro é provavelmente o retrato mais famoso na história da arte, senão, o quadro mais famoso e valioso de todo o mundo. Poucos outros trabalhos de arte são tão controversos, questionados, valiosos, elogiados, comemorados ou reproduzidos.</p>
-				</figcaption>
-			</figure>
-			
-		</section>
+			<section id="secao-primaria">
+			<!-- Aqui vai ser a seção principal onde vai ficar a imagem principal e o texto -->
+				<figure>
+					<center><img src="http://i.imgur.com/Ax2DQiV.png"></center>
+					<figcaption>
+						<h1>Mona Lisa</h1>
+						<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
 
-		<section>
-			<!-- Aqui vai ficar a seção secundária onde fica as imagens de releitura -->
+						<p>Sua pintura foi iniciada em 1503 e é nesta obra que o artista melhor concebeu a técnica do sfumato. O 	quadro representa uma mulher com uma expressão introspectiva e um pouco tímida. O seu sorriso restrito é muito sedutor, mesmo que um pouco conservador. O seu corpo representa o padrão de beleza da mulher na época de Leonardo. Este quadro é provavelmente o retrato mais famoso na história da arte, senão, o quadro mais famoso e valioso de todo o mundo. Poucos outros trabalhos de arte são tão controversos, questionados, valiosos, elogiados, comemorados ou reproduzidos.</p>
+					</figcaption>
+				</figure>
+			</section>
+
+			<section id = "secao-secundaria">
+			<!-- Aqui vai ser a seção principal onde vai ficar as imagens de releitura-->
+					<div class="container">
+						<div class="row">
+							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
+							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
+							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
+							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
+							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
+							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
+						</div>
+					</div>	
+			</section>
+
 		</section>
-		
-		<footer>
-			<!-- Aqui vai ficar o rodapé -->
-		</footer>
 	</body>
 </html>
