--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 			<!-- Aqui vai ser a seção principal onde vai ficar as imagens de releitura-->
 					<div class="container">
 						<div class="row">
-							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
-							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
-							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
-							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
-							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
-							<div class="col-md-2"><img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/mona1.jpg" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/mona2.jpg" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/mona3.jpg" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/mona4.jpg" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/mona5.jpg" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/mona6.jpg" class="img-responsive"></div>
 						</div>
 					</div>	
 			</section>
