--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						<div class="row">
 							<div class="col-md-2"><img src="img/mona1.jpg" class="img-responsive"></div>
 							<div class="col-md-2"><img src="img/mona2.jpg" class="img-responsive"></div>
-							<div class="col-md-2"><img src="img/mona3.jpg" class="img-responsive"></div>
-							<div class="col-md-2"><img src="img/mona4.jpg" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/Mona3.jpg" class="img-responsive"></div>
+							<div class="col-md-2"><img src="img/Mona4.jpg" class="img-responsive"></div>
 							<div class="col-md-2"><img src="img/mona5.jpg" class="img-responsive"></div>
 							<div class="col-md-2"><img src="img/mona6.jpg" class="img-responsive"></div>
 						</div>
