--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
 	</head>
 
 	<body>
-		<section id="secao-principal">
+		<div id="secao-principal">
 		<!-- Aqui vai ser a seção principal onde vai ficar o header -->
 
 			<section id="secao-primaria">
 			<!-- Aqui vai ser a seção principal onde vai ficar a imagem principal e o texto -->
-				<figure>
-					<center><img src="http://i.imgur.com/Ax2DQiV.png"></center>
-					<figcaption>
-						<h1>Mona Lisa</h1>
-						<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
+				<figure class="col-md-12">
+					<div >
+						<img class="img-responsive" src="http://i.imgur.com/Ax2DQiV.png">
+						<figcaption>
+							<h1>Mona Lisa</h1>
+							<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
 
-						<p>Sua pintura foi iniciada em 1503 e é nesta obra que o artista melhor concebeu a técnica do sfumato. O 	quadro representa uma mulher com uma expressão introspectiva e um pouco tímida. O seu sorriso restrito é muito sedutor, mesmo que um pouco conservador. O seu corpo representa o padrão de beleza da mulher na época de Leonardo. Este quadro é provavelmente o retrato mais famoso na história da arte, senão, o quadro mais famoso e valioso de todo o mundo. Poucos outros trabalhos de arte são tão controversos, questionados, valiosos, elogiados, comemorados ou reproduzidos.</p>
-					</figcaption>
+							<p>Sua pintura foi iniciada em 1503 e é nesta obra que o artista melhor concebeu a técnica do sfumato. O 	quadro representa uma mulher com uma expressão introspectiva e um pouco tímida. O seu sorriso restrito é muito sedutor, mesmo que um pouco conservador. O seu corpo representa o padrão de beleza da mulher na época de Leonardo. Este quadro é provavelmente o retrato mais famoso na história da arte, senão, o quadro mais famoso e valioso de todo o mundo. Poucos outros trabalhos de arte são tão controversos, questionados, valiosos, elogiados, comemorados ou reproduzidos.</p>
+						</figcaption>
+					</div>
 				</figure>
 			</section>
 
-			<section id = "secao-secundaria">
+			<div id = "secao-secundaria">
 			<!-- Aqui vai ser a seção principal onde vai ficar as imagens de releitura-->
 					<div class="container">
 						<div class="row">
-							<div class="col-md-2"><img src="img/mona1.jpg" class="img-responsive"></div>
-							<div class="col-md-2"><img src="img/mona2.jpg" class="img-responsive"></div>
-							<div class="col-md-2"><img src="img/Mona3.jpg" class="img-responsive"></div>
-							<div class="col-md-2"><img src="img/Mona4.jpg" class="img-responsive"></div>
-							<div class="col-md-2"><img src="img/mona5.jpg" class="img-responsive"></div>
-							<div class="col-md-2"><img src="img/mona6.jpg" class="img-responsive"></div>
+							<div class="col-md-4"><img src="img/Monalisa/Imagem 1 - Monalisa.png" class="img-responsive"></div>
+							<div class="col-md-4"><img src="img/Monalisa/Imagem 2 - Monalisa.png" class="img-responsive"></div>
+							<div class="col-md-4"><img src="img/Monalisa/Imagem 3 - Monalisa.png" class="img-responsive"></div>
+							<div class="col-md-4"><img src="img/Monalisa/Imagem 4 - Monalisa.png" class="img-responsive"></div>
+							<div class="col-md-4"><img src="img/Monalisa/Imagem 5 - Monalisa.png" class="img-responsive"></div>
+							<div class="col-md-4"><img src="img/Monalisa/Imagem 6 - Monalisa.png" class="img-responsive"></div>
 						</div>
 					</div>	
-			</section>
+			</div>
 
-		</section>
+		</div>
 	</body>
 </html>
