--- a/index.html
+++ b/index.html
@@ -13,33 +13,27 @@
 
 			<section id="secao-primaria">
 			<!-- Aqui vai ser a seção principal onde vai ficar a imagem principal e o texto -->
-				<figure class="col-md-12">
-					<div >
-						<img class="img-responsive" src="http://i.imgur.com/Ax2DQiV.png">
+				<figure>
+						<img src="http://i.imgur.com/Ax2DQiV.png" class="img-responsive">
 						<figcaption>
 							<h1>Mona Lisa</h1>
 							<p>Mona Lisa ("Senhora Lisa") também conhecida como A Gioconda (em italiano: La Gioconda, "a sorridente"; em francês, La Joconde) ou ainda Mona Lisa del Giocondo ("Senhora Lisa [esposa] de Giocondo") é a mais notável e conhecida obra de Leonardo da Vinci, um dos mais eminentes homens do Renascimento italiano.</p>
 
 							<p>Sua pintura foi iniciada em 1503 e é nesta obra que o artista melhor concebeu a técnica do sfumato. O 	quadro representa uma mulher com uma expressão introspectiva e um pouco tímida. O seu sorriso restrito é muito sedutor, mesmo que um pouco conservador. O seu corpo representa o padrão de beleza da mulher na época de Leonardo. Este quadro é provavelmente o retrato mais famoso na história da arte, senão, o quadro mais famoso e valioso de todo o mundo. Poucos outros trabalhos de arte são tão controversos, questionados, valiosos, elogiados, comemorados ou reproduzidos.</p>
 						</figcaption>
-					</div>
 				</figure>
 			</section>
-
-			<div id = "secao-secundaria">
+			<div id = "secao-secundaria">	
 			<!-- Aqui vai ser a seção principal onde vai ficar as imagens de releitura-->
-					<div class="container">
-						<div class="row">
-							<div class="col-md-4"><img src="img/Monalisa/Imagem 1 - Monalisa.png" class="img-responsive"></div>
-							<div class="col-md-4"><img src="img/Monalisa/Imagem 2 - Monalisa.png" class="img-responsive"></div>
-							<div class="col-md-4"><img src="img/Monalisa/Imagem 3 - Monalisa.png" class="img-responsive"></div>
-							<div class="col-md-4"><img src="img/Monalisa/Imagem 4 - Monalisa.png" class="img-responsive"></div>
-							<div class="col-md-4"><img src="img/Monalisa/Imagem 5 - Monalisa.png" class="img-responsive"></div>
-							<div class="col-md-4"><img src="img/Monalisa/Imagem 6 - Monalisa.png" class="img-responsive"></div>
-						</div>
-					</div>	
+				<center><div class="container">	
+					<div class="col-md-2"><img src="img/Monalisa/m1.png" class="img-responsive"></div>
+					<div class="col-md-2"><img src="img/Monalisa/m2.png" class="img-responsive"></div>
+					<div class="col-md-2"><img src="img/Monalisa/m3.png" class="img-responsive"></div>
+					<div class="col-md-2"><img src="img/Monalisa/m4.png" class="img-responsive"></div>
+					<div class="col-md-2"><img src="img/Monalisa/m5.png" class="img-responsive"></div>
+					<div class="col-md-2"><img src="img/Monalisa/m6.png" class="img-responsive"></div>
+				</div></center>		
 			</div>
-
 		</div>
 	</body>
 </html>
